# aws-dyn-rust

./: .gitignore  Cargo.toml  README.md  samconfig.toml  template.yml
client/: .env.example  Cargo.toml
client/src/: main.rs
common_data/: Cargo.toml
common_data/src/: lib.rs
lambda/: Cargo.toml  Makefile
lambda/src/: main.rs
