[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
reqwest = "0.12.4"
common_data = {"path" = "../common_data/"}
serde_json = "1.0.117"
tokio = { version = "1", features = ["full"] }
