[package]
name = "lambda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-sdk-dynamodb = "1.28.0"
lambda_http = "0.11.1"
lambda_runtime = "0.6.0"
serde = "1.0.136"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
common_data = {"path" = "../common_data/"}
serde_json = "1.0.117"
aws-config = "1.4.0"
sha2 = "0.10.8"
aws-sdk-route53 = "1.26.0"
regex = "1.10.4"
